funçao gera estados

--- a/Fundamentos/Bloco_6/6.1/form.html
+++ b/Fundamentos/Bloco_6/6.1/form.html
@@ -13,22 +13,22 @@
     </header>
     <form method="get" id="form">
         <fieldset>Digite seu nome:
-            <input type="text" maxlength="40" name="name" required> 
+            <input class="input" type="text" maxlength="40" name="name" required> 
             <br>
             Email:
-            <input type="text" maxlength="50" required> 
+            <input class="input" type="text" maxlength="50" required> 
             <br>
             CPF:
-            <input type="text" maxlength="11" required>
+            <input class="input" type="text" maxlength="11" required>
             <br>
             Endereço:
-            <input type="text" maxlength="200" required>
+            <input class="input" type="text" maxlength="200" required>
             <br>
             Cidade:
-            <input type="text" maxlength="28" required>
+            <input class="input" type="text" maxlength="28" required>
             <br>
             Estado:
-            <select id="brasil-states" onclick="geraEstados()" ></select>
+            <select id="brasil-states" -->></select>
             <br>
             Complemento:
             <br>
